Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- new CPSDocumentLanguageSelectWidget, require CPSCore > 3.18
- Possible to resize image within a Photo widget, and not anymore
  within an Image widget
Bug fixes:
~~~~~~~~~~
-
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-